--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,14 +20,16 @@
 
         <ul class="social list">
           <li class="social__item">
-            <svg width="40px" height="40px">
-              <use href="./images/sprite.svg#icon-youtube"></use>
-            </svg>
+            <a class="social__link link" href=""
+              ><svg class="social__svg" width="60px" height="40px">
+                <use href="./images/sprite.svg#icon-youtube"></use></svg
+            ></a>
           </li>
           <li class="social__item">
-            <svg width="40px" height="40px">
-              <use href="./images/sprite.svg#icon-instagram"></use>
-            </svg>
+            <a class="social__link link" href=""
+              ><svg class="social__svg" width="40px" height="40px">
+                <use href="./images/sprite.svg#icon-instagram"></use></svg
+            ></a>
           </li>
         </ul>
       </div>
