--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,6 +5,6 @@ $secondaryFontFamily: 'Josefin Sans', sans-serif;
 // Color variables
 
 $primaryBackgroundColor: #8FC1E3;
-$primaryTextColor:#ffe26a;
-$accentColor: #16123F;
+$primaryTextColor: #ff8928;
+$accentColor: #fff;
 
