--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,6 +5,6 @@ $secondaryFontFamily: 'Josefin Sans', sans-serif;
 // Color variables
 
 $primaryBackgroundColor: #8FC1E3;
-$primaryTextColor: #ff8928;
-$accentColor: #fff;
+$primaryTextColor: #fff;
+$accentColor: #FFD700;
 
