--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -15,7 +15,6 @@
     left: 0;
     width: 100%;
 
-    // background-color: red;
 }
 
 .nav {
@@ -36,7 +35,7 @@
     font-weight: 800;
     font-size: 30px;
     border-bottom: 3px solid $primaryTextColor;
-    color: $accentColor;
+    color: $primaryTextColor;
 
     transition: all 0.25s linear;
 
@@ -91,7 +90,7 @@
     flex-direction: column;
     transform: translateY(-100%);
     transition: transform 0.2s;
-    background: linear-gradient(113deg, rgba(255, 226, 96, 1) 0%, rgba(171, 214, 153, 1) 16%, rgba(117, 201, 176, 1) 100%);
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(95, 97, 99, 1) 100%);
     
 }
 
@@ -115,7 +114,7 @@
     font-style: normal;
     font-weight: 900;
     line-height: 1.25;
-    color: $accentColor;
+    color: $primaryTextColor;
 }
 
 .social {
@@ -171,7 +170,7 @@
 .line {
     fill: none;
     transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-    stroke: $accentColor;
+    stroke: $primaryTextColor;
     stroke-width: 5.5;
     stroke-linecap: round;
 }
@@ -191,18 +190,22 @@
 .ham3.active .top {
     stroke-dasharray: 75 130;
     stroke-dashoffset: -63px;
-    stroke: $primaryTextColor;
+    stroke: $accentColor;
+    transform: scale(1.1);
 }
 
 .ham3.active .middle {
     stroke-dashoffset: -102px;
-    stroke: $primaryTextColor;
+    stroke: $accentColor;
+    transform: scale(1.1);
 }
 
 .ham3.active .bottom {
     stroke-dasharray: 110 205;
     stroke-dashoffset: -86px;
-    stroke: $primaryTextColor;
+    stroke: $accentColor;
+    transform: scale(1.1);
+    
 }
 
 
