--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,13 +20,17 @@
 
         <ul class="social list">
           <li class="social__item">
-            <a class="social__link link" href=""
+            <a
+              class="social__link link"
+              href="https://www.youtube.com/channel/UCS01uiFUEy7klB4SDRO260w"
               ><svg class="social__svg" width="60px" height="40px">
                 <use href="./images/sprite.svg#icon-youtube"></use></svg
             ></a>
           </li>
           <li class="social__item">
-            <a class="social__link link" href=""
+            <a
+              class="social__link link"
+              href="https://www.instagram.com/newbreath_worship/"
               ><svg class="social__svg" width="40px" height="40px">
                 <use href="./images/sprite.svg#icon-instagram"></use></svg
             ></a>
